adding some sort of menu, removed image effects (adding image effects project)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Untitled/Assets/M8PlayMaker"]
 	path = Untitled/Assets/M8PlayMaker
 	url = https://github.com/ddionisio/MatePlayMaker.git
+[submodule "Untitled/Assets/M8ImageEffects"]
+	path = Untitled/Assets/M8ImageEffects
+	url = https://github.com/ddionisio/MateImageEffects.git
